[package]
name = "unsend"
version = "0.2.1"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A thread unsafe runtime for thread unsafe people"
license = "LGPL-3.0-or-later OR MPL-2.0"
repository = "https://github.com/notgull/unsend"
keywords = ["async", "runtime"]
categories = ["asynchronous"]

# when updating rust-version:
# - update ci.yml
# - update readme.md
rust-version = "1.63.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "executor"]
std = ["alloc"]
alloc = []
executor = ["alloc", "async-task", "concurrent-queue", "atomic-waker", "slab", "futures-lite"]

[dev-dependencies]
async-io = "2.0.0"
blocking = "1.3.1"
futures-lite = "1.13.0"
waker-fn = "1.1.0"

# async-task is a public dependency, the rest aren't
[dependencies]
async-task = { version = "4.4.0", default-features = false, optional = true }
atomic-waker = { version = "1.1.1", optional = true }
concurrent-queue = { version = "2.2.0", default-features = false, optional = true }
futures-lite = { version = "1.13.0", default-features = false, optional = true }
pin-project-lite = "0.2.9"
slab = { version = "0.4.8", default-features = false, optional = true }

[workspace]
members = [
    "comparisons/unsend-hello",
    "comparisons/tokio-hello",
    "comparisons/tokio-local-hello",
    "comparisons/smol-hello",
    "comparisons/smol-local-hello",
    "comparisons/unsend-lock",
    "comparisons/tokio-lock",
    "comparisons/tokio-local-lock",
    "comparisons/smol-lock",
    "comparisons/smol-local-lock",
]
