[package]
name = "unsend-lock"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
license = "LGPL-3.0-or-later OR MPL-2.0"
repository = "https://github.com/notgull/unsend"

[dependencies]
async-io = "2.2.0"
futures-lite = "1.13.0"
httparse = "1.8.0"
unsend = { version = "0.2.0", path = "../.." }
